Add proceed check to supervised_user_interstitial

SupervisedUserInterstitial now keeps track of whether it called
Proceed() on interstitial_page_ and doesn't call it again if it has
already been called for the current interstitial.

Bug: 829345
Change-Id: I2e5a66884bf9b9aa7182fdc70ea6629c38cb097b
Reviewed-on: https://chromium-review.googlesource.com/998062
Commit-Queue: Carlos IL <carlosil@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548841}
Former-commit-id: 5d0b6a0755c81454481a2b548175dc36ecb1de55